<resources>
    <string name="app_name">Invest in UAE</string>
    <string name="title_activity_investing_facilities">Investment Facilities</string>
    <string name="title_activity_facility_detailed">FacilityDetailed</string>
    <string name="auth_error">Wrong login or password</string>
    <string name="unknown_error">Some internal error occurred</string>
    <string name="large_text">" Material is the metaphor. A material metaphor is the unifying theory of a rationalized
        space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and
        ink, yet technologically advanced and open to imagination and magic. Surfaces and edges of the material provide
        visual cues that are grounded in reality. The use of familiar tactile attributes helps users quickly understand
        affordances. Yet the flexibility of the material creates new affordances that supercede those in the physical
        world, without breaking the rules of physics. The fundamentals of light, surface, and movement are key to
        conveying how objects move, interact, and exist in space and in relation to each other. Realistic lighting shows
        seams, divides space, and indicates moving parts. Bold, graphic, intentional. The foundational elements of print
        based design typography, grids, space, scale, color, and use of imagery guide visual treatments. These elements
        do far more than please the eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to
        edge imagery, large scale typography, and intentional white space create a bold and graphic interface that
        immerse the user in the experience. An emphasis on user actions makes core functionality immediately apparent
        and provides waypoints for the user. Motion provides meaning. Motion respects and reinforces the user as the
        prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design. All
        action takes place in a single environment. Objects are presented to the user without breaking the continuity of
        experience even as they transform and reorganize. Motion is meaningful and appropriate, serving to focus
        attention and maintain continuity. Feedback is subtle yet clear. Transitions are efﬁcient yet coherent. 3D
        world. The material environment is a 3D space, which means all objects have x, y, and z dimensions. The z-axis
        is perpendicularly aligned to the plane of the display, with the positive z-axis extending towards the viewer.
        Every sheet of material occupies a single position along the z-axis and has a standard 1dp thickness. On the
        web, the z-axis is used for layering and not for perspective. The 3D world is emulated by manipulating the
        y-axis. Light and shadow. Within the material environment, virtual lights illuminate the scene. Key lights
        create directional shadows, while ambient light creates soft shadows from all angles. Shadows in the material
        environment are cast by these two light sources. In Android development, shadows occur when light sources are
        blocked by sheets of material at various positions along the z-axis. On the web, shadows are depicted by
        manipulating the y-axis only. The following example shows the card with a height of 6dp. Resting elevation. All
        material objects, regardless of size, have a resting elevation, or default elevation that does not change. If an
        object changes elevation, it should return to its resting elevation as soon as possible. Component elevations.
        The resting elevation for a component type is consistent across apps (e.g., FAB elevation does not vary from 6dp
        in one app to 16dp in another app). Components may have different resting elevations across platforms, depending
        on the depth of the environment (e.g., TV has a greater depth than mobile or desktop). Responsive elevation and
        dynamic elevation offsets. Some component types have responsive elevation, meaning they change elevation in
        response to user input (e.g., normal, focused, and pressed) or system events. These elevation changes are
        consistently implemented using dynamic elevation offsets. Dynamic elevation offsets are the goal elevation that
        a component moves towards, relative to the component’s resting state. They ensure that elevation changes are
        consistent across actions and component types. For example, all components that lift on press have the same
        elevation change relative to their resting elevation. Once the input event is completed or cancelled, the
        component will return to its resting elevation. Avoiding elevation interference. Components with responsive
        elevations may encounter other components as they move between their resting elevations and dynamic elevation
        offsets. Because material cannot pass through other material, components avoid interfering with one another any
        number of ways, whether on a per component basis or using the entire app layout. On a component level,
        components can move or be removed before they cause interference. For example, a floating action button (FAB)
        can disappear or move off screen before a user picks up a card, or it can move if a snackbar appears. On the
        layout level, design your app layout to minimize opportunities for interference. For example, position the FAB
        to one side of stream of a cards so the FAB won’t interfere when a user tries to pick up one of cards. "
    </string>
    <string name="action_settings">Settings</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="helpdesk_unauthorized">Helpdesk (sign in needed)</string>
    <string name="helpdesk_menu">Helpdesk</string>
    <string name="subtitle">Ministry of economy</string>
    <string name="facility_menu">Facility</string>
    <string name="region">Region</string>
    <string name="categories">Categories</string>
    <string name="issue_menu">Issue</string>
    <string name="user_menu">User</string>
    <string name="select">Select</string>
    <string name="oops_error">Oops! Error.</string>
    <string name="try_again">Try Again</string>
    <string name="new_issue">New Issue</string>
    <string name="topic">Topic</string>
    <string name="confirm">Confirm</string>
    <string name="descripbe_question">Describe your question</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="opportunities">opportunities</string>
    <string name="map">map</string>
    <string name="issues">issues</string>
    <string name="messages">messages</string>
    <string name="project">project</string>
    <string name="loading">Loading something</string>
    <string name="notification">Notifications</string>
    <string name="description">Description</string>
    <string name="utility">Utility</string>
    <string name="employees">Employees</string>
    <string name="investment_size">Req. Investitions</string>
    <string name="profitability">Profitability</string>
    <string name="undefined">Not Stated</string>
    <string name="favorites">Favorites</string>
    <string name="given_name">Given Name</string>
    <string name="family_name">Family Name</string>
    <string name="about_header_1">Connected</string>
    <string name="about_1">Accesss to over 1.5 billion consumers through free-trade agreements.</string>
    <string name="about_header_2">Talented</string>
    <string name="about_2">The most educated workforce in the world.</string>
    <string name="about_header_3">Easy</string>
    <string name="about_3">The Lowest business costs in the G7, and low risk.</string>
    <string name="about_header_4">Innovation</string>
    <string name="about_4">Funding programs and incentives that bring innovation to market.</string>
    <string name="about_header_5">Fun</string>
    <string name="about_5">The best quality of life in the world.</string>
    <string name="about_main_header">Why Invest In UAE?</string>
    <string name="about">About</string>
    <string name="updates">updates</string>
    <string name="not_authorized">User is not authorized</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_differ">Passwords differ</string>
    <string name="sign_up">Sign Up</string>
</resources>
