<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context="com.pashikhmin.ismobileapp.MenuActivity">
    <TextView
            android:id="@+id/tv_invest_in_uae_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14pt"
            android:textAlignment="center"
            android:layout_marginTop="42dp"
            android:textColor="@color/white"
    />
    <ImageView
            android:id="@+id/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_decoration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="34dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_light"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
    />
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_invest_in_uae_header"
            android:layout_marginTop="18dp"
            android:columnCount="2"
            android:rowCount="3"
    >
        <Button
                android:id="@+id/button_menu_facility"
                android:text="@string/facility_menu"
                android:drawableTop="@drawable/ic_facility_menu_icon"
                style="@style/MenuButtonStyle"
        />
        <Button
                android:id="@+id/button_menu_favorites"
                android:text="@string/favorites"
                android:drawableTop="@drawable/ic_category_menu_icon"
                style="@style/MenuButtonStyle"
        />
        <Button
                android:id="@+id/button_menu_about"
                android:text="@string/about"
                android:drawableTop="@drawable/ic_region_menu_icon"
                style="@style/MenuButtonStyle"
        />
        <Button
                android:id="@+id/button_menu_issue"
                android:text="@string/issue_menu"
                android:drawableTop="@drawable/ic_issue_menu_icon"
                style="@style/MenuButtonStyle"
        />
        <Button
                android:id="@+id/button_menu_user"
                android:text="@string/user_menu"
                android:drawableTop="@drawable/ic_user_menu_icon"
                style="@style/MenuButtonStyle"
        />
        <Button
                android:id="@+id/button_menu_helpdesk"
                android:text="@string/helpdesk_menu"
                android:drawableTop="@drawable/ic_helpdesk_menu_icon"
                style="@style/MenuButtonStyle"
        />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
