<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.pashikhmin.ismobileapp.LoginActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_decoration"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
    />
    <ImageView
            android:id="@+id/image"
            android:layout_width="2dp"
            android:layout_height="82dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_decoration_top_line"
            android:layout_marginStart="25dp"
            android:scaleType="centerCrop"
    />
    <LinearLayout
            android:id="@+id/form_fields"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:layout_marginTop="22dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
    >
        <EditText
                android:id="@+id/first_name_input"
                android:hint="@string/given_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:background="@drawable/ic_button"
                android:paddingBottom="27dp"
                android:paddingTop="7dp"
                android:paddingStart="46dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="22dp"
        />
        <EditText
                android:id="@+id/last_name_input"
                android:hint="@string/family_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:background="@drawable/ic_button"
                android:paddingBottom="27dp"
                android:paddingTop="7dp"
                android:paddingStart="46dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="22dp"
        />
        <EditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:hint="@string/email"
                android:background="@drawable/ic_button"
                android:paddingBottom="27dp"
                android:paddingTop="7dp"
                android:paddingStart="46dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="22dp"
                android:inputType="textEmailAddress"/>
        <EditText
                android:id="@+id/password_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:background="@drawable/ic_button"
                android:paddingBottom="27dp"
                android:paddingTop="7dp"
                android:paddingStart="46dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="22dp"
        />
        <EditText
                android:id="@+id/password_input2"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16pt"
                android:background="@drawable/ic_button"
                android:paddingBottom="27dp"
                android:paddingTop="7dp"
                android:paddingStart="46dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="22dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error_text"
                android:textColor="@color/colorAccent"
                android:text="@string/oops_error"
                android:layout_margin="12dp"
                android:textSize="12pt"
                android:visibility="invisible"
        />
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/form_fields"
            style="@style/confirm_button_style"
            android:id="@+id/to_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="-1dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="42dp"
            android:text="@string/sign_in"/>
    <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/to_app"
            app:layout_constraintTop_toTopOf="@id/to_app"
            app:layout_constraintBottom_toBottomOf="@id/to_app"
            android:layout_margin="12dp"
            android:visibility="invisible"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
